made add post button larger and implemented file input for user

--- a/client/src/components/AddPost/index.css
+++ b/client/src/components/AddPost/index.css
@@ -1,7 +1,13 @@
 .add-post {
     color: var(--primary);
     border: none;
+    bottom: 3rem;
     
+}
+
+.add-file-btn {
+    color: var(--primary);
+    margin: 10px;
 }
 
 .text-field {
