--- a/client/src/index.css
+++ b/client/src/index.css
@@ -102,6 +102,21 @@ h6 {
   margin-bottom: 3%;
 }
 
+.replyList {
+  align-items: center;
+  text-decoration: none;
+}
+
+.replyMap {
+  width: 100%;
+  height: 60vh;
+  overflow-y: scroll;
+}
+
+.replyMap::-webkit-scrollbar{
+  display: none;
+}
+
 @media screen and (max-width: 980px) {
 .head {
   display: flex;
